BE/error/src/main/java/com/example/demo/schedule/application/dto/MonthCalendarResponse.java
package com.example.demo.schedule.application.dto;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

import java.time.LocalDateTime;

@Getter
@AllArgsConstructor
@NoArgsConstructor
@Builder(toBuilder = true)
public class MonthCalendarResponse {
    private Long eventId;
    private String eventName;
    private LocalDateTime eventStartDate;
}
